[gd_scene load_steps=10 format=3 uid="uid://giem5wpuiegy"]

[ext_resource type="Script" path="res://player.gd" id="1_l1j4u"]
[ext_resource type="Texture2D" uid="uid://v382er7nii0g" path="res://Character.png.png" id="2_lu1vy"]

[sub_resource type="Animation" id="Animation_74ndj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pgxp5"]
resource_name = "idle"
length = 5.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_j1jny"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_4ia3q"]
resource_name = "walk"
length = 0.65
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16, 0.35, 0.52),
"transitions": PackedFloat32Array(2.14355, 1, 0.5, 1),
"update": 1,
"values": [3, 2, 4, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cyiv3"]
_data = {
"RESET": SubResource("Animation_74ndj"),
"idle": SubResource("Animation_pgxp5"),
"jump": SubResource("Animation_j1jny"),
"walk": SubResource("Animation_4ia3q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgh3s"]
size = Vector2(16, 30)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_12wmd"]
a = Vector2(-10, 0)
b = Vector2(9, 0)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_l1j4u")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_lu1vy")
hframes = 2
vframes = 3

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cyiv3")
}
speed_scale = 1.42

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_pgh3s")

[node name="Name" type="RichTextLabel" parent="." groups=["name"]]
offset_left = -21.0
offset_top = -26.0
offset_right = 19.0
offset_bottom = 14.0
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Akio[/center]"
scroll_active = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 12)
shape = SubResource("SegmentShape2D_12wmd")

[node name="Cooler" type="Timer" parent="Area2D"]
wait_time = 0.69
one_shot = true

[node name="Timer" type="Timer" parent="Area2D/Cooler"]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Area2D/Cooler" to="." method="_on_cooler_timeout"]
[connection signal="timeout" from="Area2D/Cooler/Timer" to="." method="_on_timer_timeout"]
